# axum-first-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
docker/: rust.Dockerfile
src/: app_state.rs  error.rs  main.rs  persistence.rs  route.rs
src/controller/: healthcheck.rs  mod.rs
src/entity/: user.rs
src/handler/: healthcheck.rs  user.rs
src/http/: routes.rs
