[package]
name = "rust-axum-first-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
derive_more = { version = "2.0.1", features = ["full"] }
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
