[package]
name = "rust-axum-first-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
guid-create = "0.4.1"
hyper = "1.6.0"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
